test/corpus/test_part4.txt
===========================================================
const definition
===========================================================
p: const * * const i32 == hello;
a :== 1.4;
b: string == "what";
c: (i: int) -> float == 100.100;
c :== {
    return true;
};
-----------------------------------------------------------

(source_file
  (declaration
    (expression_declaration
      (declaration_left_side
        (non_template_identifier
          (ordinary_identifier)))
      (expression_definition
        (left_side_of_definition
          (type
            (expression
              (any_identifier
                (no_namespace_identifier
                  (non_template_identifier
                    (ordinary_identifier)))))))
        (expression
          (any_identifier
            (no_namespace_identifier
              (non_template_identifier
                (ordinary_identifier))))))))
  (declaration
    (expression_declaration
      (declaration_left_side
        (non_template_identifier
          (ordinary_identifier)))
      (expression_definition
        (left_side_of_definition)
        (expression
          (literal
            (float))))))
  (declaration
    (expression_declaration
      (declaration_left_side
        (non_template_identifier
          (ordinary_identifier)))
      (expression_definition
        (left_side_of_definition
          (type
            (expression
              (any_identifier
                (no_namespace_identifier
                  (non_template_identifier
                    (ordinary_identifier)))))))
        (expression
          (literal
            (string))))))
  (declaration
    (expression_declaration
      (declaration_left_side
        (non_template_identifier
          (ordinary_identifier)))
      (expression_definition
        (left_side_of_definition
          (type
            (function_type
              (function_type_without_return_type
                (comma_seperated_declarations
                  (function_declaration_argument
                    (declaration
                      (no_definition_declaration
                        (declaration_left_side
                          (non_template_identifier
                            (ordinary_identifier)))
                        (type
                          (expression
                            (any_identifier
                              (no_namespace_identifier
                                (non_template_identifier
                                  (ordinary_identifier)))))))))))
              (type
                (expression
                  (any_identifier
                    (no_namespace_identifier
                      (non_template_identifier
                        (ordinary_identifier)))))))))
        (expression
          (literal
            (float))))))
  (declaration
    (block_declaration
      (declaration_left_side
        (non_template_identifier
          (ordinary_identifier)))
      (block_definition
        (left_side_of_definition)
        (block
          (statement
            (non_block_statement
              (return_statement
                (expression
                  (literal
                    (boolean)))))))))))
